--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "imageSrc": "projects/react.png",
     "description": "Worked on several React projects, building dynamic UIs with efficient state management and a component-based approach.",
     "skills": ["React", "Firebase", "Node","Express"],
-    "demo": "https://github.com/Arun6408/React-Projects/blob/main/README.md",
+    "demo": "https://arun6408.github.io/React-links/",
     "source": "https://github.com/Arun6408/React-Projects"
   },
   {
@@ -12,7 +12,7 @@
     "imageSrc": "projects/node.png",
     "description": "Developed multiple Node.js projects, focusing on creating scalable APIs and efficient server-side solutions.",
     "skills": ["Express", "Node","MongoDb"],
-    "demo": "https://github.com/Arun6408/Node.js-Projects/blob/main/README.md",
+    "demo": "https://arun6408.github.io/Node-Links/",
     "source": "https://github.com/Arun6408/Node.js-Projects"
   },
   {
